# emby-download

./: .env.example  .gitignore  README.md  _fix_stopall.py  _patch_temp.py  _patch_temp2.py  full_output.txt  pyproject.toml  requirements.txt  test_output_full.txt
app/: __init__.py
app/backend/: api.py  download_manager.py  server.py
app/cli/: __init__.py  commands.py  main.py
app/config/: __init__.py  schema.py  settings.py
app/core/: __init__.py  auth.py  download_capability.py  download_preview.py  emby_api.py  naming.py  playback_info.py  series.py
app/downloader/: __init__.py  base.py  direct_download.py  range_downloader.py  stream_download.py  task_store.py
docs/: acceptance_stage10.md  acceptance_stage10d6.md  acceptance_stage10e.md  api_reference.md  architecture.md  gui.md  manual_test.md  user_guide.md
scripts/: build_exe.py  debug_download_file_integrity.py  debug_failed_tasks.py  debug_prepare_task.py  debug_start_pending_task.py  dev_setup.ps1  gui_smoke_pywinauto.py
tests/: test_gui_real_series.py  test_gui_real_smoke.py  test_gui_smoke_structure.py  test_release_sanity.py  test_stage10d2.py  test_stage10d3.py  test_stage10d4.py  test_stage10d5.py  test_stage10e.py  test_stage10f.py  test_stage10g_download_flow.py  test_stage11_download_backend_flow.py  test_stage11_media_sources.py  test_stage11_series_pages.py  test_stage11c_start_pending.py  test_stage11d_failed_prepare.py  test_stage12_task_ui_restore.py  test_stage12_threaded_download_controller.py  test_stage12e_worker_signal_handlers.py  test_stage12g_gui_only.py  test_stage13_gui_download_path.py  test_stage13_gui_function_wiring.py  test_stage16_download_integrity.py  test_stage17_downloader_timeout_resume.py  test_stage18_qthread_lifecycle.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage6.py  test_stage7.py  test_stage8.py
(+16 files in other folders)
