[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "embyd"
version = "0.1.0"
description = "Emby Download Client for Windows - Download your authorized Emby media locally"
readme = "README.md"
authors = [
    {name = "EmbyD Contributors"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["emby", "downloader", "media", "movie", "episode"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]
gui = [
    "PySide6>=6.6.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
embyd-gui = "app.gui.app:main"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "gui_real: tests that require a real Emby server and GUI (pytest-qt) — skipped by default",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
